# micro-trading

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.md  run.py
.claude/skills/: adr.md  context-slimming.md  kis-api.md  manage-skills.md  memory.md  study-mentor.md  verify-implementation.md
.github/workflows/: deploy.yml
app/: config.py  database.py  main.py
app/api/: market.py  orders.py  portfolio.py  positions.py  router.py  strategies.py  system.py
app/broker/: base.py  factory.py
app/models/: __init__.py  account.py  base.py  order.py  portfolio_snapshot.py  position.py  price_cache.py  stock_master.py  stock_memo.py  strategy.py  trade.py  watchlist.py
app/scheduler/: jobs.py  scheduler.py
app/schemas/: common.py  market.py  order.py  portfolio.py  position.py  strategy.py  watchlist.py
app/services/: connection_service.py  market_service.py  order_service.py  portfolio_service.py  price_cache_service.py  stock_master_service.py  stock_memo_service.py  strategy_service.py  watchlist_service.py
app/strategies/: base.py  runner.py
app/web/: hangul_util.py  routes.py  stock_list.py
docs/adr/: ADR-001-orderable-03pct-safety-margin.md  ADR-002-kis-5xx-retry-pattern.md  ADR-003-htmx-only-orders-rendering.md  ADR-004-api-documentation-standard.md
docs/study/: bugfix_persistence_portfolio_500_study.md  phase10_mode_switching_study.md  phase11_ux_polish_study.md  phase12_commission_ux_study.md  phase12b_moving_average_api_study.md  (+11 more)
tests/: conftest.py  test_order_service.py
(+49 files in other folders)
